fix an bug oncomponent cookieConsent about button align-items, update from end to flex-end

--- a/src/styles/components/pingcapCookieConsent.scss
+++ b/src/styles/components/pingcapCookieConsent.scss
@@ -4,7 +4,7 @@
   .CookieConsent {
     background: $B4 !important;
     justify-content: center !important;
-    align-items: end !important;
+    align-items: flex-end !important;
     padding: 24px;
 
     .content {
